Update dark mode examples

--- a/src/pages/docs/content.mdx
+++ b/src/pages/docs/content.mdx
@@ -26,14 +26,14 @@ Use the square bracket notation to define any arbitrary content value on the fly
 <Example p="none">
   <div class="px-4 sm:px-0">
     <div class="p-8 w-full max-w-xl mx-auto bg-white shadow-lg text-gray-500 dark:bg-gray-800 dark:text-gray-400">
-      Higher resolution means more than just a better-quality image. With a Retina 6K display, <a href="https://www.apple.com/pro-display-xdr/" class="text-blue-600 dark:text-blue-500 font-medium after:content-['_↗'] after:text-sm after:font-bold" target="_blank">Pro Display XDR</a> gives you nearly 40 percent more screen real estate than a 5K display.
+      Higher resolution means more than just a better-quality image. With a Retina 6K display, <a href="https://www.apple.com/pro-display-xdr/" class="text-blue-600 dark:text-sky-400 font-medium after:content-['_↗'] after:text-sm after:font-bold" target="_blank">Pro Display XDR</a> gives you nearly 40 percent more screen real estate than a 5K display.
     </div>
   </div>
 </Example>
 
 ```html
 Higher resolution means more than just a better-quality image. With a Retina
-6K display, <a class="text-blue-600 **after:content-['_↗']** ..." href="https://www.
+6K display, <a class="text-blue-600 **after:content-['_↗']** ..." dark-class="text-sky-400 **after:content-['_↗']** ..." href="https://www.
 apple.com/pro-display-xdr/" target="_blank">Pro Display XDR</a> gives you
 nearly 40 percent more screen real estate than a 5K display.
 ```
