--- a/src/pages/docs/text-decoration.mdx
+++ b/src/pages/docs/text-decoration.mdx
@@ -61,7 +61,7 @@ Control how text is decorated with the `underline`, `no-underline`, and `line-th
 
 <Example hint="Try hovering over the text to see the expected behaviour">
   <div class="text-xl text-center font-medium leading-6 space-y-4">
-    <a href="#" class="no-underline hover:underline text-cyan-600">Link with no underline</a>
+    <a href="#" class="no-underline hover:underline text-cyan-600 dark:text-cyan-400">Link with no underline</a>
   </div>
 </Example>
 
