Update flex examples for dark mode

--- a/src/pages/docs/flex-grow.mdx
+++ b/src/pages/docs/flex-grow.mdx
@@ -22,13 +22,13 @@ Use `grow` to allow a flex item to grow to fill any available space:
 
 <Example resizable>
   <div class="flex gap-4 text-white text-sm font-bold font-mono leading-6 bg-stripes-indigo rounded-lg">
-    <div class="w-14 h-14 flex-none rounded-lg flex items-center justify-center bg-indigo-300">
+    <div class="w-14 h-14 flex-none rounded-lg flex items-center justify-center bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">
       01
     </div>
     <div class="p-4 grow rounded-lg flex items-center justify-center bg-indigo-500 shadow-lg">
       02
     </div>
-    <div class="p-4 w-14 h-14 flex-none rounded-lg flex items-center justify-center bg-indigo-300">
+    <div class="p-4 w-14 h-14 flex-none rounded-lg flex items-center justify-center bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">
       03
     </div>
   </div>
@@ -54,13 +54,13 @@ Use `grow-0` to prevent a flex item from growing:
 
 <Example resizable>
   <div class="flex gap-4 text-white text-sm font-bold font-mono leading-6 bg-stripes-pink rounded-lg">
-    <div class="p-4 grow rounded-lg flex items-center justify-center bg-pink-300">
+    <div class="p-4 grow rounded-lg flex items-center justify-center bg-pink-300 dark:bg-pink-800 dark:text-pink-400">
       01
     </div>
     <div class="shrink-0 w-14 h-14 grow-0 rounded-lg flex items-center justify-center bg-pink-500 shadow-lg">
       02
     </div>
-    <div class="p-4 grow rounded-lg hidden md:flex items-center justify-center bg-pink-300">
+    <div class="p-4 grow rounded-lg hidden md:flex items-center justify-center bg-pink-300 dark:bg-pink-800 dark:text-pink-400">
       03
     </div>
   </div>
