--- a/src/pages/docs/flex-shrink.mdx
+++ b/src/pages/docs/flex-shrink.mdx
@@ -22,13 +22,13 @@ Use `shrink` to allow a flex item to shrink if needed:
 
 <Example resizable>
   <div class="flex gap-4 text-white text-sm font-bold font-mono leading-6 bg-stripes-indigo rounded-lg">
-    <div class="p-4 w-14 h-14 flex-none rounded-lg flex items-center justify-center bg-indigo-300">
+    <div class="p-4 w-14 h-14 flex-none rounded-lg flex items-center justify-center bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">
       01
     </div>
     <div class="p-4 w-64 shrink rounded-lg flex items-center justify-center bg-indigo-500 shadow-lg">
       02
     </div>
-    <div class="p-4 w-14 h-14 flex-none rounded-lg hidden sm:flex items-center justify-center bg-indigo-300">
+    <div class="p-4 w-14 h-14 flex-none rounded-lg hidden sm:flex items-center justify-center bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">
       03
     </div>
   </div>
@@ -54,13 +54,13 @@ Use `shrink-0` to prevent a flex item from shrinking:
 
 <Example resizable>
   <div class="flex gap-4 text-white text-sm font-bold font-mono leading-6 bg-stripes-blue rounded-lg">
-    <div class="p-4 flex-1 rounded-lg flex items-center justify-center bg-blue-300">
+    <div class="p-4 flex-1 rounded-lg flex items-center justify-center bg-blue-300 dark:bg-blue-800 dark:text-blue-500">
       01
     </div>
     <div class="p-4 w-16 sm:w-64 shrink-0 rounded-lg flex items-center justify-center bg-blue-500 shadow-lg">
       02
     </div>
-    <div class="p-4 flex-1 rounded-lg hidden sm:flex items-center justify-center bg-blue-300">
+    <div class="p-4 flex-1 rounded-lg hidden sm:flex items-center justify-center bg-blue-300 dark:bg-blue-800 dark:text-blue-500">
       03
     </div>
   </div>
