Update grid examples for dark mode

--- a/src/pages/docs/align-self.mdx
+++ b/src/pages/docs/align-self.mdx
@@ -18,9 +18,9 @@ Use `self-auto` to align an item based on the value of the container's `align-it
 <Example>
   <div class="font-mono text-white text-sm font-bold leading-6">
     <div class="flex items-stretch gap-4 w-full rounded-lg bg-stripes-light-blue h-24">
-      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-light-blue-300">01</div>
+      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-light-blue-300 dark:bg-light-blue-800 dark:text-light-blue-500">01</div>
       <div class="self-auto p-4 flex-1 flex items-center justify-center shadow-lg rounded-lg bg-light-blue-500">02</div>
-      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-light-blue-300">03</div>
+      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-light-blue-300 dark:bg-light-blue-800 dark:text-light-blue-500">03</div>
     </div>
   </div>
 </Example>
@@ -40,9 +40,9 @@ Use `self-start` to align an item to the start of the container's cross axis, de
 <Example>
   <div class="font-mono text-white text-sm font-bold leading-6">
     <div class="flex items-stretch gap-4 w-full rounded-lg bg-stripes-pink h-24">
-      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-pink-300">01</div>
+      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-pink-300 dark:bg-pink-800 dark:text-pink-400">01</div>
       <div class="self-start p-4 flex-1 flex items-center justify-center shadow-lg rounded-lg bg-pink-500">02</div>
-      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-pink-300">03</div>
+      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-pink-300 dark:bg-pink-800 dark:text-pink-400">03</div>
     </div>
   </div>
 </Example>
@@ -62,9 +62,9 @@ Use `self-center` to align an item along the center of the container's cross axi
 <Example>
   <div class="font-mono text-white text-sm font-bold leading-6">
     <div class="flex items-stretch gap-4 w-full rounded-lg bg-stripes-purple h-24">
-      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-purple-300">01</div>
+      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-purple-300 dark:bg-purple-800 dark:text-purple-400">01</div>
       <div class="self-center p-4 flex-1 flex items-center justify-center shadow-lg rounded-lg bg-purple-500">02</div>
-      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-purple-300">03</div>
+      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-purple-300 dark:bg-purple-800 dark:text-purple-400">03</div>
     </div>
   </div>
 </Example>
@@ -84,9 +84,9 @@ Use `self-end` to align an item to the end of the container's cross axis, despit
 <Example>
   <div class="font-mono text-white text-sm font-bold leading-6">
     <div class="flex items-stretch gap-4 w-full rounded-lg bg-stripes-indigo h-24">
-      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-indigo-300">01</div>
+      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">01</div>
       <div class="self-end p-4 flex-1 flex items-center justify-center shadow-lg rounded-lg bg-indigo-500">02</div>
-      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-indigo-300">03</div>
+      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">03</div>
     </div>
   </div>
 </Example>
@@ -106,9 +106,9 @@ Use `self-stretch` to stretch an item to fill the container's cross axis, despit
 <Example>
   <div class="font-mono text-white text-sm font-bold leading-6">
     <div class="flex items-stretch gap-4 w-full rounded-lg bg-stripes-fuchsia h-24">
-      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-fuchsia-300">01</div>
+      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-fuchsia-300 dark:bg-fuchsia-800 dark:text-fuchsia-400">01</div>
       <div class="self-stretch p-4 flex-1 flex items-center justify-center shadow-lg rounded-lg bg-fuchsia-500">02</div>
-      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-fuchsia-300">03</div>
+      <div class="p-4 flex-1 flex items-center justify-center rounded-lg bg-fuchsia-300 dark:bg-fuchsia-800 dark:text-fuchsia-400">03</div>
     </div>
   </div>
 </Example>
