--- a/src/pages/docs/grid-auto-flow.mdx
+++ b/src/pages/docs/grid-auto-flow.mdx
@@ -17,11 +17,11 @@ Use the `grid-flow-{keyword}` utilities to control how the auto-placement algori
 
 <Example>
   <div class="grid grid-cols-3 grid-rows-3 grid-flow-row-dense gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-purple rounded-lg">
-    <div class="p-4 col-span-2 rounded-lg bg-purple-300">01</div>
-    <div class="p-4 col-span-2 rounded-lg bg-purple-300">02</div>
+    <div class="p-4 col-span-2 rounded-lg bg-purple-300 dark:bg-purple-800 dark:text-purple-400">01</div>
+    <div class="p-4 col-span-2 rounded-lg bg-purple-300 dark:bg-purple-800 dark:text-purple-400">02</div>
     <div class="p-4 rounded-lg shadow-lg bg-purple-500">03</div>
-    <div class="p-4 rounded-lg bg-purple-300">04</div>
-    <div class="p-4 rounded-lg bg-purple-300">05</div>
+    <div class="p-4 rounded-lg bg-purple-300 dark:bg-purple-800 dark:text-purple-400">04</div>
+    <div class="p-4 rounded-lg bg-purple-300 dark:bg-purple-800 dark:text-purple-400">05</div>
   </div>
 </Example>
 
