--- a/src/pages/docs/grid-column.mdx
+++ b/src/pages/docs/grid-column.mdx
@@ -22,12 +22,12 @@ Use the `col-span-{n}` utilities to make an element span _n_ columns.
 
 <Example>
   <div class="grid grid-cols-3 gap-4 font-mono text-white text-sm text-center font-bold leading-6">
-    <div class="p-4 rounded-lg bg-indigo-300">01</div>
-    <div class="p-4 rounded-lg bg-indigo-300">02</div>
-    <div class="p-4 rounded-lg bg-indigo-300">03</div>
+    <div class="p-4 rounded-lg bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">01</div>
+    <div class="p-4 rounded-lg bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">02</div>
+    <div class="p-4 rounded-lg bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">03</div>
     <div class="p-4 rounded-lg shadow-lg bg-indigo-500 col-span-2">04</div>
-    <div class="p-4 rounded-lg bg-indigo-300">05</div>
-    <div class="p-4 rounded-lg bg-indigo-300">06</div>
+    <div class="p-4 rounded-lg bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">05</div>
+    <div class="p-4 rounded-lg bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">06</div>
     <div class="p-4 rounded-lg shadow-lg bg-indigo-500 col-span-2">07</div>
   </div>
 </Example>
