--- a/src/pages/docs/grid-row.mdx
+++ b/src/pages/docs/grid-row.mdx
@@ -23,7 +23,7 @@ Use the `row-span-{n}` utilities to make an element span _n_ rows.
 <Example>
   <div class="grid grid-rows-3 grid-flow-col gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">
     <div class="p-4 rounded-lg shadow-lg bg-fuchsia-500 grid place-content-center row-span-3">01</div>
-    <div class="p-4 rounded-lg bg-fuchsia-300 grid place-content-center col-span-2">02</div>
+    <div class="p-4 rounded-lg bg-fuchsia-300 grid place-content-center col-span-2 dark:bg-fuchsia-800 dark:text-fuchsia-400">02</div>
     <div class="p-4 rounded-lg shadow-lg bg-fuchsia-500 grid place-content-center row-span-2 col-span-2">03</div>
   </div>
 </Example>
