--- a/src/pages/docs/justify-self.mdx
+++ b/src/pages/docs/justify-self.mdx
@@ -17,12 +17,12 @@ Use `justify-self-auto` to align an item based on the value of the grid's `justi
 
 <Example>
   <div class="grid grid-cols-3 gap-4 justify-items-stretch auto-rows-fr font-mono text-white text-sm font-bold leading-6 text-center">
-    <div class="p-4 rounded-lg bg-purple-300">01</div>
+    <div class="p-4 rounded-lg bg-purple-300 dark:bg-purple-800 dark:text-purple-400">01</div>
     <div class="justify-self-auto p-4 rounded-lg bg-purple-500 shadow-lg">02</div>
-    <div class="p-4 rounded-lg bg-purple-300">03</div>
-    <div class="p-4 rounded-lg bg-purple-300">04</div>
-    <div class="p-4 rounded-lg bg-purple-300">05</div>
-    <div class="p-4 rounded-lg bg-purple-300">06</div>
+    <div class="p-4 rounded-lg bg-purple-300 dark:bg-purple-800 dark:text-purple-400">03</div>
+    <div class="p-4 rounded-lg bg-purple-300 dark:bg-purple-800 dark:text-purple-400">04</div>
+    <div class="p-4 rounded-lg bg-purple-300 dark:bg-purple-800 dark:text-purple-400">05</div>
+    <div class="p-4 rounded-lg bg-purple-300 dark:bg-purple-800 dark:text-purple-400">06</div>
   </div>
 </Example>
 
@@ -43,14 +43,14 @@ Use `justify-self-start` to align a grid item to the start its inline axis:
 
 <Example>
   <div class="grid grid-cols-3 gap-4 justify-items-stretch auto-rows-fr font-mono text-white text-sm font-bold leading-6 text-center">
-    <div class="p-4 rounded-lg bg-pink-300">01</div>
+    <div class="p-4 rounded-lg bg-pink-300 dark:bg-pink-800 dark:text-pink-400">01</div>
     <div class="bg-stripes-pink rounded-lg">
       <div class="justify-self-start p-4 w-14 h-14 rounded-lg bg-pink-500 shadow-lg">02</div>
     </div>
-    <div class="p-4 rounded-lg bg-pink-300">03</div>
-    <div class="p-4 rounded-lg bg-pink-300">04</div>
-    <div class="p-4 rounded-lg bg-pink-300">05</div>
-    <div class="p-4 rounded-lg bg-pink-300">06</div>
+    <div class="p-4 rounded-lg bg-pink-300 dark:bg-pink-800 dark:text-pink-400">03</div>
+    <div class="p-4 rounded-lg bg-pink-300 dark:bg-pink-800 dark:text-pink-400">04</div>
+    <div class="p-4 rounded-lg bg-pink-300 dark:bg-pink-800 dark:text-pink-400">05</div>
+    <div class="p-4 rounded-lg bg-pink-300 dark:bg-pink-800 dark:text-pink-400">06</div>
   </div>
 </Example>
 
@@ -71,14 +71,14 @@ Use `justify-self-center` to align a grid item along the center its inline axis:
 
 <Example>
   <div class="grid grid-cols-3 gap-4 justify-items-stretch auto-rows-fr font-mono text-white text-sm font-bold leading-6 text-center">
-    <div class="p-4 rounded-lg bg-indigo-300">01</div>
+    <div class="p-4 rounded-lg bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">01</div>
     <div class="justify-self-center grid w-full bg-stripes-indigo rounded-lg">
       <div class="justify-self-center p-4 w-14 h-14 rounded-lg bg-indigo-500 shadow-lg">02</div>
     </div>
-    <div class="p-4 rounded-lg bg-indigo-300">03</div>
-    <div class="p-4 rounded-lg bg-indigo-300">04</div>
-    <div class="p-4 rounded-lg bg-indigo-300">05</div>
-    <div class="p-4 rounded-lg bg-indigo-300">06</div>
+    <div class="p-4 rounded-lg bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">03</div>
+    <div class="p-4 rounded-lg bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">04</div>
+    <div class="p-4 rounded-lg bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">05</div>
+    <div class="p-4 rounded-lg bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">06</div>
   </div>
 </Example>
 
@@ -99,14 +99,14 @@ Use `justify-self-end` to align a grid item to the end its inline axis:
 
 <Example>
   <div class="grid grid-cols-3 gap-4 justify-items-stretch auto-rows-fr font-mono text-white text-sm font-bold leading-6 text-center">
-    <div class="p-4 rounded-lg bg-blue-300">01</div>
+    <div class="p-4 rounded-lg bg-blue-300 dark:bg-blue-800 dark:text-blue-500">01</div>
     <div class="justify-self-end grid w-full bg-stripes-blue rounded-lg">
       <div class="justify-self-end p-4 w-14 h-14 rounded-lg bg-blue-500 shadow-lg">02</div>
     </div>
-    <div class="p-4 rounded-lg bg-blue-300">03</div>
-    <div class="p-4 rounded-lg bg-blue-300">04</div>
-    <div class="p-4 rounded-lg bg-blue-300">05</div>
-    <div class="p-4 rounded-lg bg-blue-300">06</div>
+    <div class="p-4 rounded-lg bg-blue-300 dark:bg-blue-800 dark:text-blue-500">03</div>
+    <div class="p-4 rounded-lg bg-blue-300 dark:bg-blue-800 dark:text-blue-500">04</div>
+    <div class="p-4 rounded-lg bg-blue-300 dark:bg-blue-800 dark:text-blue-500">05</div>
+    <div class="p-4 rounded-lg bg-blue-300 dark:bg-blue-800 dark:text-blue-500">06</div>
   </div>
 </Example>
 
@@ -128,22 +128,22 @@ Use `justify-self-stretch` to stretch a grid item to fill the grid area on its i
 <Example>
   <div class="grid grid-cols-3 gap-4 justify-items-stretch auto-rows-fr font-mono text-white text-sm font-bold leading-6 text-center">
     <div class="bg-stripes-fuchsia rounded-lg">
-      <div class="p-4 w-14 h-14 rounded-lg bg-fuchsia-300">01</div>
+      <div class="p-4 w-14 h-14 rounded-lg bg-fuchsia-300 dark:bg-fuchsia-800 dark:text-fuchsia-400">01</div>
     </div>
     <div class="justify-self-stretch grid w-full bg-stripes-fuchsia rounded-lg">
       <div class="justify-self-stretch p-4 rounded-lg bg-fuchsia-500 shadow-lg">02</div>
     </div>
     <div class="bg-stripes-fuchsia rounded-lg">
-      <div class="p-4 w-14 h-14 rounded-lg bg-fuchsia-300">03</div>
+      <div class="p-4 w-14 h-14 rounded-lg bg-fuchsia-300 dark:bg-fuchsia-800 dark:text-fuchsia-400">03</div>
     </div>
     <div class="bg-stripes-fuchsia rounded-lg">
-      <div class="p-4 w-14 h-14 rounded-lg bg-fuchsia-300">04</div>
+      <div class="p-4 w-14 h-14 rounded-lg bg-fuchsia-300 dark:bg-fuchsia-800 dark:text-fuchsia-400">04</div>
     </div>
     <div class="bg-stripes-fuchsia rounded-lg">
-      <div class="p-4 w-14 h-14 rounded-lg bg-fuchsia-300">05</div>
+      <div class="p-4 w-14 h-14 rounded-lg bg-fuchsia-300 dark:bg-fuchsia-800 dark:text-fuchsia-400">05</div>
     </div>
     <div class="bg-stripes-fuchsia rounded-lg">
-      <div class="p-4 w-14 h-14 rounded-lg bg-fuchsia-300">06</div>
+      <div class="p-4 w-14 h-14 rounded-lg bg-fuchsia-300 dark:bg-fuchsia-800 dark:text-fuchsia-400">06</div>
     </div>
   </div>
 </Example>
