--- a/src/pages/docs/place-self.mdx
+++ b/src/pages/docs/place-self.mdx
@@ -17,12 +17,12 @@ Use `place-self-auto` to align an item based on the value of the container's `pl
 
 <Example>
   <div class="grid grid-cols-3 gap-4 place-iems-stretch font-mono text-white text-sm font-bold leading-6">
-    <div class="p-8 rounded-lg flex items-center justify-center bg-indigo-300">01</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">01</div>
     <div class="p-8 rounded-lg flex items-center justify-center bg-indigo-500 shadow-lg palce-self-auto">02</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-indigo-300">03</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-indigo-300">04</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-indigo-300">05</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-indigo-300">06</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">03</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">04</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">05</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-indigo-300 dark:bg-indigo-800 dark:text-indigo-400">06</div>
   </div>
 </Example>
 
@@ -43,14 +43,14 @@ Use `place-self-start` to align an item to the start on both axes:
 
 <Example>
   <div class="grid grid-cols-3 gap-4 place-iems-stretch font-mono text-white text-sm font-bold leading-6">
-    <div class="p-8 rounded-lg flex items-center justify-center bg-purple-300">01</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-purple-300 dark:bg-purple-800 dark:text-purple-400">01</div>
     <div class="bg-stripes-purple rounded-lg grid">
       <div class="w-14 h-14 rounded-lg flex items-center justify-center bg-purple-500 shadow-lg place-self-start">02</div>
     </div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-purple-300">03</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-purple-300">04</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-purple-300">05</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-purple-300">06</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-purple-300 dark:bg-purple-800 dark:text-purple-400">03</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-purple-300 dark:bg-purple-800 dark:text-purple-400">04</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-purple-300 dark:bg-purple-800 dark:text-purple-400">05</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-purple-300 dark:bg-purple-800 dark:text-purple-400">06</div>
   </div>
 </Example>
 
@@ -71,14 +71,14 @@ Use `place-self-center` to align an item at the center on both axes:
 
 <Example>
   <div class="grid grid-cols-3 gap-4 place-iems-stretch font-mono text-white text-sm font-bold leading-6">
-    <div class="p-8 rounded-lg flex items-center justify-center bg-light-blue-300">01</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-light-blue-300 dark:bg-light-blue-800 dark:text-light-blue-500">01</div>
     <div class="bg-stripes-light-blue rounded-lg grid">
       <div class="w-14 h-14 rounded-lg flex items-center justify-center bg-light-blue-500 shadow-lg place-self-center">02</div>
     </div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-light-blue-300">03</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-light-blue-300">04</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-light-blue-300">05</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-light-blue-300">06</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-light-blue-300 dark:bg-light-blue-800 dark:text-light-blue-500">03</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-light-blue-300 dark:bg-light-blue-800 dark:text-light-blue-500">04</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-light-blue-300 dark:bg-light-blue-800 dark:text-light-blue-500">05</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-light-blue-300 dark:bg-light-blue-800 dark:text-light-blue-500">06</div>
   </div>
 </Example>
 
@@ -99,14 +99,14 @@ Use `place-self-end` to align an item to the end on both axes:
 
 <Example>
   <div class="grid grid-cols-3 gap-4 place-iems-stretch font-mono text-white text-sm font-bold leading-6">
-    <div class="p-8 rounded-lg flex items-center justify-center bg-pink-300">01</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-pink-300 dark:bg-pink-800 dark:text-pink-400">01</div>
     <div class="bg-stripes-pink rounded-lg grid">
       <div class="w-14 h-14 rounded-lg flex items-center justify-center bg-pink-500 shadow-lg place-self-end">02</div>
     </div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-pink-300">03</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-pink-300">04</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-pink-300">05</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-pink-300">06</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-pink-300 dark:bg-pink-800 dark:text-pink-400">03</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-pink-300 dark:bg-pink-800 dark:text-pink-400">04</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-pink-300 dark:bg-pink-800 dark:text-pink-400">05</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-pink-300 dark:bg-pink-800 dark:text-pink-400">06</div>
   </div>
 </Example>
 
@@ -127,12 +127,12 @@ Use `place-self-stretch` to stretch an item on both axes:
 
 <Example>
   <div class="grid grid-cols-3 gap-4 place-iems-stretch font-mono text-white text-sm font-bold leading-6">
-    <div class="p-8 rounded-lg flex items-center justify-center bg-fuchsia-300">01</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-fuchsia-300 dark:bg-fuchsia-800 dark:text-fuchsia-400">01</div>
     <div class="p-8 rounded-lg flex items-center justify-center bg-fuchsia-500 shadow-lg place-self-stretch">02</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-fuchsia-300">03</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-fuchsia-300">04</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-fuchsia-300">05</div>
-    <div class="p-8 rounded-lg flex items-center justify-center bg-fuchsia-300">06</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-fuchsia-300 dark:bg-fuchsia-800 dark:text-fuchsia-400">03</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-fuchsia-300 dark:bg-fuchsia-800 dark:text-fuchsia-400">04</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-fuchsia-300 dark:bg-fuchsia-800 dark:text-fuchsia-400">05</div>
+    <div class="p-8 rounded-lg flex items-center justify-center bg-fuchsia-300 dark:bg-fuchsia-800 dark:text-fuchsia-400">06</div>
   </div>
 </Example>
 
