--- a/src/pages/docs/border-collapse.mdx
+++ b/src/pages/docs/border-collapse.mdx
@@ -17,25 +17,25 @@ Use `border-collapse` to combine adjacent cell borders into a single border when
 
 <Example p="none">
   <div class="px-4 py-8 sm:px-8">
-    <table class="border-collapse w-full border border-gray-400 bg-white text-sm shadow-sm">
-      <thead class="bg-gray-50">
+    <table class="border-collapse w-full border border-gray-400 dark:border-gray-500 bg-white dark:bg-gray-800 text-sm shadow-sm">
+      <thead class="bg-gray-50 dark:bg-gray-700">
         <tr>
-          <th class="w-1/2 border border-gray-300 font-semibold p-4 text-gray-900 text-left">State</th>
-          <th class="w-1/2 border border-gray-300 font-semibold p-4 text-gray-900 text-left">City</th>
+          <th class="w-1/2 border border-gray-300 dark:border-gray-600 font-semibold p-4 text-gray-900 dark:text-gray-200 text-left">State</th>
+          <th class="w-1/2 border border-gray-300 dark:border-gray-600 font-semibold p-4 text-gray-900 dark:text-gray-200 text-left">City</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td class="border border-gray-300 p-4 text-gray-500">Indiana</td>
-          <td class="border border-gray-300 p-4 text-gray-500">Indianapolis</td>
+          <td class="border border-gray-300 dark:border-gray-700 p-4 text-gray-500 dark:text-gray-400">Indiana</td>
+          <td class="border border-gray-300 dark:border-gray-700 p-4 text-gray-500 dark:text-gray-400">Indianapolis</td>
         </tr>
         <tr>
-          <td class="border border-gray-300 p-4 text-gray-500">Ohio</td>
-          <td class="border border-gray-300 p-4 text-gray-500">Columbus</td>
+          <td class="border border-gray-300 dark:border-gray-700 p-4 text-gray-500 dark:text-gray-400">Ohio</td>
+          <td class="border border-gray-300 dark:border-gray-700 p-4 text-gray-500 dark:text-gray-400">Columbus</td>
         </tr>
         <tr>
-          <td class="border border-gray-300 p-4 text-gray-500">Michigan</td>
-          <td class="border border-gray-300 p-4 text-gray-500">Detroit</td>
+          <td class="border border-gray-300 dark:border-gray-700 p-4 text-gray-500 dark:text-gray-400">Michigan</td>
+          <td class="border border-gray-300 dark:border-gray-700 p-4 text-gray-500 dark:text-gray-400">Detroit</td>
         </tr>
       </tbody>
     </table>
@@ -43,25 +43,25 @@ Use `border-collapse` to combine adjacent cell borders into a single border when
 </Example>
 
 ```html
-<table class="**border-collapse** border border-gray-400 ...">
+<table class="**border-collapse** border border-gray-400 ..." dark-class="**border-collapse** border border-gray-500 ...">
   <thead>
     <tr>
-      <th class="border border-gray-300 ...">State</th>
-      <th class="border border-gray-300 ...">City</th>
+      <th class="border border-gray-300 ..." dark-class="border border-gray-600 ...">State</th>
+      <th class="border border-gray-300 ..." dark-class="border border-gray-600 ...">City</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td class="border border-gray-300 ...">Indiana</td>
-      <td class="border border-gray-300 ...">Indianapolis</td>
+      <td class="border border-gray-300 ..." dark-class="border border-gray-700 ...">Indiana</td>
+      <td class="border border-gray-300 ..." dark-class="border border-gray-700 ...">Indianapolis</td>
     </tr>
     <tr>
-      <td class="border border-gray-300 ...">Ohio</td>
-      <td class="border border-gray-300 ...">Columbus</td>
+      <td class="border border-gray-300 ..." dark-class="border border-gray-700 ...">Ohio</td>
+      <td class="border border-gray-300 ..." dark-class="border border-gray-700 ...">Columbus</td>
     </tr>
     <tr>
-      <td class="border border-gray-300 ...">Michigan</td>
-      <td class="border border-gray-300 ...">Detroit</td>
+      <td class="border border-gray-300 ..." dark-class="border border-gray-700 ...">Michigan</td>
+      <td class="border border-gray-300 ..." dark-class="border border-gray-700 ...">Detroit</td>
     </tr>
   </tbody>
 </table>
@@ -73,25 +73,25 @@ Use `border-separate` to force each cell to display its own separate borders.
 
 <Example p="none">
   <div class="px-4 py-8 sm:px-8">
-    <table class="border-separate w-full border border-gray-400 bg-white text-sm shadow-sm">
-      <thead class="bg-gray-50">
+    <table class="border-separate w-full border border-gray-400 dark:border-gray-500 bg-white dark:bg-gray-800 text-sm shadow-sm">
+      <thead class="bg-gray-50 dark:bg-gray-700">
         <tr>
-          <th class="w-1/2 border border-gray-300 font-semibold p-4 text-gray-900 text-left">State</th>
-          <th class="w-1/2 border border-gray-300 font-semibold p-4 text-gray-900 text-left">City</th>
+          <th class="w-1/2 border border-gray-300 dark:border-gray-600 font-semibold p-4 text-gray-900 dark:text-gray-200 text-left">State</th>
+          <th class="w-1/2 border border-gray-300 dark:border-gray-600 font-semibold p-4 text-gray-900 dark:text-gray-200 text-left">City</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td class="border border-gray-300 p-4 text-gray-500">Indiana</td>
-          <td class="border border-gray-300 p-4 text-gray-500">Indianapolis</td>
+          <td class="border border-gray-300 dark:border-gray-700 p-4 text-gray-500 dark:text-gray-400">Indiana</td>
+          <td class="border border-gray-300 dark:border-gray-700 p-4 text-gray-500 dark:text-gray-400">Indianapolis</td>
         </tr>
         <tr>
-          <td class="border border-gray-300 p-4 text-gray-500">Ohio</td>
-          <td class="border border-gray-300 p-4 text-gray-500">Columbus</td>
+          <td class="border border-gray-300 dark:border-gray-700 p-4 text-gray-500 dark:text-gray-400">Ohio</td>
+          <td class="border border-gray-300 dark:border-gray-700 p-4 text-gray-500 dark:text-gray-400">Columbus</td>
         </tr>
         <tr>
-          <td class="border border-gray-300 p-4 text-gray-500">Michigan</td>
-          <td class="border border-gray-300 p-4 text-gray-500">Detroit</td>
+          <td class="border border-gray-300 dark:border-gray-700 p-4 text-gray-500 dark:text-gray-400">Michigan</td>
+          <td class="border border-gray-300 dark:border-gray-700 p-4 text-gray-500 dark:text-gray-400">Detroit</td>
         </tr>
       </tbody>
     </table>
@@ -99,25 +99,25 @@ Use `border-separate` to force each cell to display its own separate borders.
 </Example>
 
 ```html
-<table class="**border-separate** border border-gray-400 ...">
+<table class="**border-separate** border border-gray-400 ..." dark-class="**border-separate** border border-gray-500 ...">
   <thead>
     <tr>
-      <th class="border border-gray-300 ...">State</th>
-      <th class="border border-gray-300 ...">City</th>
+      <th class="border border-gray-300 ..." dark-class="border border-gray-600 ...">State</th>
+      <th class="border border-gray-300 ..." dark-class="border border-gray-600 ...">City</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td class="border border-gray-300 ...">Indiana</td>
-      <td class="border border-gray-300 ...">Indianapolis</td>
+      <td class="border border-gray-300 ..." dark-class="border border-gray-700 ...">Indiana</td>
+      <td class="border border-gray-300 ..." dark-class="border border-gray-700 ...">Indianapolis</td>
     </tr>
     <tr>
-      <td class="border border-gray-300 ...">Ohio</td>
-      <td class="border border-gray-300 ...">Columbus</td>
+      <td class="border border-gray-300 ..." dark-class="border border-gray-700 ...">Ohio</td>
+      <td class="border border-gray-300 ..." dark-class="border border-gray-700 ...">Columbus</td>
     </tr>
     <tr>
-      <td class="border border-gray-300 ...">Michigan</td>
-      <td class="border border-gray-300 ...">Detroit</td>
+      <td class="border border-gray-300 ..." dark-class="border border-gray-700 ...">Michigan</td>
+      <td class="border border-gray-300 ..." dark-class="border border-gray-700 ...">Detroit</td>
     </tr>
   </tbody>
 </table>
