--- a/src/pages/docs/table-layout.mdx
+++ b/src/pages/docs/table-layout.mdx
@@ -20,26 +20,26 @@ Use `table-auto` to allow the table to automatically size columns to fit the con
     <table class="border-collapse table-auto w-full text-sm">
       <thead>
         <tr>
-          <th class="border-b font-medium p-4 pl-8 pt-0 pb-3 text-gray-400 text-left">Song</th>
-          <th class="border-b font-medium p-4 pt-0 pb-3 text-gray-400 text-left">Artist</th>
-          <th class="border-b font-medium p-4 pr-8 pt-0 pb-3 text-gray-400 text-left">Year</th>
+          <th class="border-b dark:border-gray-600 font-medium p-4 pl-8 pt-0 pb-3 text-gray-400 dark:text-gray-200 text-left">Song</th>
+          <th class="border-b dark:border-gray-600 font-medium p-4 pt-0 pb-3 text-gray-400 dark:text-gray-200 text-left">Artist</th>
+          <th class="border-b dark:border-gray-600 font-medium p-4 pr-8 pt-0 pb-3 text-gray-400 dark:text-gray-200 text-left">Year</th>
         </tr>
       </thead>
-      <tbody class="bg-white">
+      <tbody class="bg-white bg-gray-800">
         <tr>
-          <td class="border-b border-gray-100 p-4 pl-8 text-gray-500">The Sliding Mr. Bones (Next Stop, Pottersville)</td>
-          <td class="border-b border-gray-100 p-4 text-gray-500">Malcolm Lockyer</td>
-          <td class="border-b border-gray-100 p-4 pr-8 text-gray-500">1961</td>
+          <td class="border-b border-gray-100 dark:border-gray-700 p-4 pl-8 text-gray-500 dark:text-gray-400">The Sliding Mr. Bones (Next Stop, Pottersville)</td>
+          <td class="border-b border-gray-100 dark:border-gray-700 p-4 text-gray-500 dark:text-gray-400">Malcolm Lockyer</td>
+          <td class="border-b border-gray-100 dark:border-gray-700 p-4 pr-8 text-gray-500 dark:text-gray-400">1961</td>
         </tr>
         <tr>
-          <td class="border-b border-gray-100 p-4 pl-8 text-gray-500">Witchy Woman</td>
-          <td class="border-b border-gray-100 p-4 text-gray-500">The Eagles</td>
-          <td class="border-b border-gray-100 p-4 pr-8 text-gray-500">1972</td>
+          <td class="border-b border-gray-100 dark:border-gray-700 p-4 pl-8 text-gray-500 dark:text-gray-400">Witchy Woman</td>
+          <td class="border-b border-gray-100 dark:border-gray-700 p-4 text-gray-500 dark:text-gray-400">The Eagles</td>
+          <td class="border-b border-gray-100 dark:border-gray-700 p-4 pr-8 text-gray-500 dark:text-gray-400">1972</td>
         </tr>
         <tr>
-          <td class="border-b border-gray-200 p-4 pl-8 text-gray-500">Shining Star</td>
-          <td class="border-b border-gray-200 p-4 text-gray-500">Earth, Wind, and Fire</td>
-          <td class="border-b border-gray-200 p-4 pr-8 text-gray-500">1975</td>
+          <td class="border-b border-gray-200 dark:border-gray-600 p-4 pl-8 text-gray-500 dark:text-gray-400">Shining Star</td>
+          <td class="border-b border-gray-200 dark:border-gray-600 p-4 text-gray-500 dark:text-gray-400">Earth, Wind, and Fire</td>
+          <td class="border-b border-gray-200 dark:border-gray-600 p-4 pr-8 text-gray-500 dark:text-gray-400">1975</td>
         </tr>
       </tbody>
     </table>
@@ -86,26 +86,26 @@ You can manually set the widths for some columns and the rest of the available w
     <table class="border-collapse table-fixed w-full text-sm">
       <thead>
         <tr>
-          <th class="border-b font-medium p-4 pl-8 pt-0 pb-3 text-gray-400 text-left">Song</th>
-          <th class="border-b font-medium p-4 pt-0 pb-3 text-gray-400 text-left">Artist</th>
-          <th class="border-b font-medium p-4 pr-8 pt-0 pb-3 text-gray-400 text-left">Year</th>
+          <th class="border-b dark:border-gray-600 font-medium p-4 pl-8 pt-0 pb-3 text-gray-400 dark:text-gray-200 text-left">Song</th>
+          <th class="border-b dark:border-gray-600 font-medium p-4 pt-0 pb-3 text-gray-400 dark:text-gray-200 text-left">Artist</th>
+          <th class="border-b dark:border-gray-600 font-medium p-4 pr-8 pt-0 pb-3 text-gray-400 dark:text-gray-200 text-left">Year</th>
         </tr>
       </thead>
-      <tbody class="bg-white">
+      <tbody class="bg-white dark:bg-gray-800">
         <tr>
-          <td class="border-b border-gray-100 p-4 pl-8 text-gray-500">The Sliding Mr. Bones (Next Stop, Pottersville)</td>
-          <td class="border-b border-gray-100 p-4 text-gray-500">Malcolm Lockyer</td>
-          <td class="border-b border-gray-100 p-4 pr-8 text-gray-500">1961</td>
+          <td class="border-b border-gray-100 dark:border-gray-700 p-4 pl-8 text-gray-500 dark:text-gray-400">The Sliding Mr. Bones (Next Stop, Pottersville)</td>
+          <td class="border-b border-gray-100 dark:border-gray-700 p-4 text-gray-500 dark:text-gray-400">Malcolm Lockyer</td>
+          <td class="border-b border-gray-100 dark:border-gray-700 p-4 pr-8 text-gray-500 dark:text-gray-400">1961</td>
         </tr>
         <tr>
-          <td class="border-b border-gray-100 p-4 pl-8 text-gray-500">Witchy Woman</td>
-          <td class="border-b border-gray-100 p-4 text-gray-500">The Eagles</td>
-          <td class="border-b border-gray-100 p-4 pr-8 text-gray-500">1972</td>
+          <td class="border-b border-gray-100 dark:border-gray-700 p-4 pl-8 text-gray-500 dark:text-gray-400">Witchy Woman</td>
+          <td class="border-b border-gray-100 dark:border-gray-700 p-4 text-gray-500 dark:text-gray-400">The Eagles</td>
+          <td class="border-b border-gray-100 dark:border-gray-700 p-4 pr-8 text-gray-500 dark:text-gray-400">1972</td>
         </tr>
         <tr>
-          <td class="border-b border-gray-200 p-4 pl-8 text-gray-500">Shining Star</td>
-          <td class="border-b border-gray-200 p-4 text-gray-500">Earth, Wind, and Fire</td>
-          <td class="border-b border-gray-200 p-4 pr-8 text-gray-500">1975</td>
+          <td class="border-b border-gray-200 dark:border-gray-600 p-4 pl-8 text-gray-500 dark:text-gray-400">Shining Star</td>
+          <td class="border-b border-gray-200 dark:border-gray-600 p-4 text-gray-500 dark:text-gray-400">Earth, Wind, and Fire</td>
+          <td class="border-b border-gray-200 dark:border-gray-600 p-4 pr-8 text-gray-500 dark:text-gray-400">1975</td>
         </tr>
       </tbody>
     </table>
