Update dark mode shadow examples

--- a/src/pages/docs/box-shadow.mdx
+++ b/src/pages/docs/box-shadow.mdx
@@ -23,7 +23,7 @@ export const classes = {
 
 Use the `shadow-sm`, `shadow`, `shadow-md`, `shadow-lg`, `shadow-xl`, or `shadow-2xl` utilities to apply different sized outer box shadows to an element.
 
-<Example p="none">
+<Example p="none" lightOnly={true}>
   <div class="flex sm:block overflow-scroll sm:overflow-visible scroll-p-8">
   <div class="flex items-center justify-around gap-12 font-mono font-bold shrink-0 p-8">
     <div class="flex flex-col items-center shrink-0">
@@ -57,7 +57,7 @@ Use the `shadow-sm`, `shadow`, `shadow-md`, `shadow-lg`, `shadow-xl`, or `shadow
 
 Use the `shadow-inner` utility to apply a subtle inset box shadow to an element. This can be useful for things like form controls or wells.
 
-<Example>
+<Example lightOnly={true}>
   <div class="flex items-center justify-around gap-4 font-mono font-bold">
     <div class="flex flex-col items-center">
       <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">shadow-inner</p>
@@ -74,7 +74,7 @@ Use the `shadow-inner` utility to apply a subtle inset box shadow to an element.
 
 Use `shadow-none` to remove an existing box shadow from an element. This is most commonly used to remove a shadow that was applied at a smaller breakpoint.
 
-<Example>
+<Example lightOnly={true}>
   <div class="flex items-center justify-around gap-4 font-mono font-bold">
     <div class="flex flex-col items-center">
       <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">shadow-none</p>
