--- a/src/pages/docs/drop-shadow.mdx
+++ b/src/pages/docs/drop-shadow.mdx
@@ -24,7 +24,7 @@ export const classes = {
 
 Use the `drop-shadow-{amount}` utilities to add a drop shadow to an element.
 
-<Example p="none">
+<Example p="none" lightOnly={true}>
   <div class="flex justify-start sm:block overflow-scroll sm:overflow-visible scroll-p-8">
   <div class="flex items-center justify-around gap-6 sm:gap-4 font-mono font-bold shrink-0 p-8">
     <div class="flex flex-col items-center shrink-0">
