--- a/src/pages/docs/ring-color.mdx
+++ b/src/pages/docs/ring-color.mdx
@@ -27,8 +27,8 @@ export const classes = {
 Use the `ring-{color}` utilities to set the color of an [outline ring](/docs/ring-width).
 
 <Example>
-  <div class="flex justify-center max-w-md mx-auto gap-4 text-white text-sm text-center font-bold leading-6 text-white">
-    <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring-2 ring-offset-2 ring-offset-gray-50 ring-blue-500">Create account</button>
+  <div class="flex justify-center max-w-md mx-auto gap-4 text-white text-sm text-center font-bold leading-6">
+    <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring-2 ring-offset-2 ring-offset-gray-50 ring-blue-500 dark:ring-offset-gray-900 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent">Create account</button>
   </div>
 </Example>
 
@@ -43,8 +43,8 @@ Use the `ring-{color}` utilities to set the color of an [outline ring](/docs/rin
 Control the opacity of an element's background color using the color opacity modifier.
 
 <Example>
-  <div class="flex justify-center max-w-md mx-auto gap-4 text-white text-sm text-center font-bold leading-6 text-white">
-    <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring-2 ring-offset-2 ring-offset-gray-50 ring-blue-500/50">Create account</button>
+  <div class="flex justify-center max-w-md mx-auto gap-4 text-white text-sm text-center font-bold leading-6">
+    <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring-2 ring-offset-2 ring-offset-gray-50 ring-blue-500/50 dark:ring-offset-gray-900 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent">Create account</button>
   </div>
 </Example>
 
